# csg

./: .gitignore  CMakeLists.txt  README.md
blender/: README.md  csg.py
include/: aabb.h  libcsg.h  triangle.h  trimesh.h
src/: aabb.cpp  aabb_test.cpp  csg_test.cpp  intersection_test.cpp  libcsg.cpp  triangle.c  triangle.cpp  trimesh.cpp
swig/: pycsg.i
